# vllm-stack

./: .env.sample  .gitignore  README.md  docker-compose.yaml  fahmai-rag-challange.ipynb  pyproject.toml
ollama/: id_ed25519.pub.sample  id_ed25519.sample
